Modernize code to use Java 21 constructs (var, text blocks, pattern matching)
Co-authored-by: barakb <1074551+barakb@users.noreply.github.com>